--- a/uptime/index.html
+++ b/uptime/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Uptime Counter</title>
+    <title>ATRI-BOT Uptime</title>
     <style>
         body {
             display: flex;
@@ -40,8 +40,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Uptime Counter</h1>
-        <p>Current uptime is: <span id="uptime">Loading...</span></p>
+        <h1>ATRI-BOT Uptime</h1>
+        <p>Current uptime is: <span id="uptime">加载中...</span></p>
     </div>
 
     <script>
