--- a/verify/index.html
+++ b/verify/index.html
@@ -3,77 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>验证中...</title>
+    <title>ATRI-BOT Verify</title>
     <script src="./captcha.js"></script>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-        }
-        h1 {
-            color: #4CAF50;
-        }
-        p {
-            margin: 20px 0;
-        }
-        textarea {
-            width: 90%;
-            max-width: 600px;
-            padding: 10px;
-            margin-top: 10px;
-            resize: none;
-            font-family: monospace;
-        }
-        .button {
-            background-color: #4CAF50;
-            color: white;
-            padding: 10px 20px;
-            margin-top: 20px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 16px;
-        }
-        .button:disabled {
-            background-color: #eeeeee;
-            cursor: not-allowed;
-        }
+        body{font-family:Arial,sans-serif;display:flex;justify-content:center;align-items:center;height:100vh;margin:0;background:#f0f0f0}
+        .container{text-align:center;background:#fff;padding:2rem;border-radius:8px;box-shadow:0 4px 6px rgba(0,0,0,.1)}
+        button{background:#4CAF50;color:#fff;border:none;padding:10px 20px;font-size:16px;cursor:pointer;border-radius:4px;transition:background .3s}
+        button:hover{background:#45a049}
     </style>
 </head>
 <body>
-    <h1>请帮助我们识别您是否为自动化程序</h1>
-    <p>加载完毕后Token会显示在下方:</p>
-    <textarea id="g-recaptcha-response" rows="5" cols="50" readonly></textarea>
-    <button id="copy-btn" class="button" disabled>复制Token</button>
+<div class="container">
+    <h1>ATRI-BOT Verify</h1>
+    <button onclick="verify()">Verify</button>
+</div>
+<script>
+    function verify(){
+        let params = new URLSearchParams(window.location.search);
+        let qq = params.get('qq');
+        if(!qq){
+            alert('不合法的URL打开');
+            return;
+        }
+        qq = atob(qq);
 
-    <script>
         grecaptcha.ready(function() {
-            grecaptcha.execute('6LdWX1cqAAAAABF5V15pI1ZoLa4gMSnh0kCAP01d', {action: 'homepage'}).then(function(token) {
-                document.getElementById('g-recaptcha-response').value = token;
-                document.title = '已完成验证';
-                document.getElementById('copy-btn').disabled = false;
+            grecaptcha.execute('6LdWX1cqAAAAABF5V15pI1ZoLa4gMSnh0kCAP01d', {action: 'verify'}).then(function(token) {
+                fetch(`https://public.meownya.asia/api/verify?qq=${encodeURIComponent(qq)}&token=${token}`)
+                    .then(response => response.json())
+                    .then(data => {
+                        alert(data.message || '验证成功');
+                    })
+                    .catch(error => {
+                        console.error('Error:', error);
+                        alert('验证失败');
+                    });
             });
         });
-
-        document.getElementById('copy-btn').addEventListener('click', function() {
-            const textarea = document.getElementById('g-recaptcha-response');
-            textarea.select();
-            textarea.setSelectionRange(0, 99999); 
-
-            try {
-                document.execCommand('copy');
-                alert('Token已复制');
-            } catch (err) {
-                alert('无法复制Token请手动复制');
-            }
-        });
-    </script>
+    }
+</script>
 </body>
 </html>
