--- a/verify/index.html
+++ b/verify/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ATRI-BOT Verify</title>
     <script src="./captcha.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -14,15 +15,26 @@
             height: 100vh;
             margin: 0;
             background: linear-gradient(to bottom right, #e0f7fa, #b2ebf2);
+            animation: fadeIn 1s;
+        }
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
         }
         .container {
             text-align: center;
-            background: white;
+            background: #fff;
             padding: 3rem;
             border-radius: 12px;
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
             max-width: 400px;
             width: 100%;
+            transform: scale(0.95);
+            animation: scaleIn 0.5s forwards;
+        }
+        @keyframes scaleIn {
+            from { transform: scale(0.9); }
+            to { transform: scale(1); }
         }
         h1 {
             font-size: 24px;
@@ -37,16 +49,54 @@
             font-size: 18px;
             cursor: pointer;
             border-radius: 4px;
-            transition: background 0.3s, transform 0.2s;
+            transition: background 0.3s, transform 0.2s, box-shadow 0.2s;
             margin: 0.5rem;
         }
         button:hover {
             background: #45a049;
             transform: translateY(-2px);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
         button:disabled {
             background: #a5d6a7;
             cursor: not-allowed;
+        }
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1000;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0, 0, 0, 0.4);
+        }
+        .modal-content {
+            background-color: #fefefe;
+            margin: 15% auto;
+            padding: 20px;
+            border: 1px solid #888;
+            width: 80%;
+            max-width: 500px;
+            border-radius: 10px;
+            animation: slideIn 0.3s;
+        }
+        @keyframes slideIn {
+            from { transform: translateY(-30px); opacity: 0; }
+            to { transform: translateY(0); opacity: 1; }
+        }
+        .close {
+            color: #aaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+        }
+        .close:hover,
+        .close:focus {
+            color: black;
+            text-decoration: none;
+            cursor: pointer;
         }
     </style>
 </head>
@@ -56,14 +106,61 @@
     <button id="verifyBtn" onclick="verify()">Verify</button>
     <button id="removeVerifyBtn" onclick="removeVerify()">Remove Verify</button>
 </div>
+
+<!-- Modal -->
+<div id="myModal" class="modal">
+    <div class="modal-content">
+        <span class="close" onclick="closeModal()">&times;</span>
+        <p id="modalMessage"></p>
+    </div>
+</div>
+
 <script>
+    function showModal(message) {
+        document.getElementById('modalMessage').innerText = message;
+        document.getElementById('myModal').style.display = "block";
+    }
+
+    function closeModal() {
+        document.getElementById('myModal').style.display = "none";
+    }
+
+    window.onclick = function(event) {
+        if (event.target === document.getElementById('myModal')) {
+            closeModal();
+        }
+    };
+
+    function info() {
+        const params = new URLSearchParams(window.location.search);
+        let sessionid = params.get('sessionid');
+        if (!sessionid) {
+            showModal('不合法的URL打开');
+            verifyBtn.disabled = false;
+            return;
+        }
+        fetch(`https://public.meownya.asia/api/info?sessionid=${encodeURIComponent(sessionid)}&token=${encodeURIComponent(token)}`, {
+            method: 'POST'
+        })
+        .then(response => response.json().then(data => ({status: response.status, body: data})))
+        .then(({status, body}) => {
+            showModal(`状态码: ${status}\n消息: ${JSON.stringify(body)}`);
+            verifyBtn.disabled = false;
+        })
+        .catch(error => {
+            console.error('Error:', error);
+            showModal('拉取失败' + error.error);
+            verifyBtn.disabled = false;
+        });
+    }
+
     function verify() {
         const verifyBtn = document.getElementById('verifyBtn');
         verifyBtn.disabled = true;
         const params = new URLSearchParams(window.location.search);
         let sessionid = params.get('sessionid');
         if (!sessionid) {
-            alert('不合法的URL打开');
+            showModal('不合法的URL打开');
             verifyBtn.disabled = false;
             return;
         }
@@ -73,16 +170,16 @@
                 fetch(`https://public.meownya.asia/api/verify?sessionid=${encodeURIComponent(sessionid)}&token=${encodeURIComponent(token)}`, {
                     method: 'POST'
                 })
-                    .then(response => response.json().then(data => ({status: response.status, body: data})))
-                    .then(({status, body}) => {
-                        alert(`状态码: ${status}\n消息: ${JSON.stringify(body)}`);
-                        verifyBtn.disabled = false;
-                    })
-                    .catch(error => {
-                        console.error('Error:', error);
-                        alert('验证失败' + error.error);
-                        verifyBtn.disabled = false;
-                    });
+                .then(response => response.json().then(data => ({status: response.status, body: data})))
+                .then(({status, body}) => {
+                    showModal(`状态码: ${status}\n消息: ${JSON.stringify(body)}`);
+                    verifyBtn.disabled = false;
+                })
+                .catch(error => {
+                    console.error('Error:', error);
+                    showModal('验证失败' + error.error);
+                    verifyBtn.disabled = false;
+                });
             });
         });
     }
@@ -93,7 +190,7 @@
         const params = new URLSearchParams(window.location.search);
         let sessionid = params.get('sessionid');
         if (!sessionid) {
-            alert('不合法的URL打开');
+            showModal('不合法的URL打开');
             removeVerifyBtn.disabled = false;
             return;
         }
@@ -101,17 +198,20 @@
         fetch(`https://public.meownya.asia/api/verify?sessionid=${encodeURIComponent(sessionid)}`, {
             method: 'POST'
         })
-            .then(response => response.json().then(data => ({status: response.status, body: data})))
-            .then(({status, body}) => {
-                alert(`状态码: ${status}\n消息: ${JSON.stringify(body)}`);
-                removeVerifyBtn.disabled = false;
-            })
-            .catch(error => {
-                console.error('Error:', error);
-                alert('移除验证失败' + error.error);
-                removeVerifyBtn.disabled = false;
-            });
+        .then(response => response.json().then(data => ({status: response.status, body: data})))
+        .then(({status, body}) => {
+            showModal(`状态码: ${status}\n消息: ${JSON.stringify(body)}`);
+            removeVerifyBtn.disabled = false;
+        })
+        .catch(error => {
+            console.error('Error:', error);
+            showModal('移除验证失败' + error.error);
+            removeVerifyBtn.disabled = false;
+        });
     }
+
+    // Automatically call info function when the page loads
+    window.onload = info;
 </script>
 </body>
 </html>
