--- a/verify/index.html
+++ b/verify/index.html
@@ -160,14 +160,13 @@
         const params = new URLSearchParams(window.location.search);
         let sessionid = params.get('sessionid');
         if (!sessionid) {
-            showModal('不合法的URL打开', null, true);
+            showModal('参数错误, 请完整的打开URL', null, true);
             return;
         }
         fetch(`https://public.meownya.asia/api/info?sessionid=${encodeURIComponent(sessionid)}`, {
             method: 'POST'
         })
         .then(response => {
-            if (!response.ok) throw new Error(`HTTP error! status: ${response.status}`);
             return response.json();
         })
         .then(body => {
@@ -196,7 +195,6 @@
                     method: 'POST'
                 })
                 .then(response => {
-                    if (!response.ok) throw new Error(`HTTP error! status: ${response.status}`);
                     return response.json();
                 })
                 .then(body => {
@@ -218,7 +216,7 @@
         const params = new URLSearchParams(window.location.search);
         let sessionid = params.get('sessionid');
         if (!sessionid) {
-            showModal('不合法的URL打开', null, true);
+            showModal('参数错误, 请完整的打开URL', null, true);
             removeVerifyBtn.disabled = false;
             return;
         }
