--- a/verify/index.html
+++ b/verify/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ATRI-BOT Verify</title>
-    <script src="./captcha.js"></script>
+    <script src="https://www.recaptcha.net/recaptcha/api.js" async defer></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         body {
@@ -163,7 +163,7 @@
             showModal('参数错误, 请完整的打开URL', null, true);
             return;
         }
-        fetch(`https://api.meownya.asia/v1/key?key=${encodeURIComponent(key)}&vtoken=info`, {
+        fetch(`https://api.meownya.asia/v1/verify?key=${encodeURIComponent(key)}&vtoken=info`, {
             method: 'POST'
         })
         .then(response => {
@@ -240,5 +240,6 @@
 
     window.onload = info;
 </script>
+<script src="https://atri.statuspage.io/embed/script.js"></script>
 </body>
 </html>
